--- a/src/Grafica/Administrador_ventana.form
+++ b/src/Grafica/Administrador_ventana.form
@@ -2048,7 +2048,7 @@
                 </Container>
               </SubComponents>
             </Container>
-            <Container class="javax.swing.JPanel" name="pesta&#xf1;a3">
+            <Container class="javax.swing.JPanel" name="pesta&#xf1;a3_Actividades">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -2133,7 +2133,13 @@
                                           <Component id="jSeparator" min="-2" pref="9" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="Actividad_crear_botonAgregarActividad" alignment="1" min="-2" pref="165" max="-2" attributes="0"/>
+                                              <Group type="102" alignment="1" attributes="0">
+                                                  <Component id="Actividad_textoCalificacion" min="-2" pref="111" max="-2" attributes="0"/>
+                                                  <EmptySpace max="-2" attributes="0"/>
+                                                  <Component id="Actividad_calificacion" min="-2" pref="83" max="-2" attributes="0"/>
+                                                  <EmptySpace max="32767" attributes="0"/>
+                                                  <Component id="Actividad_crear_botonAgregarActividad" min="-2" pref="165" max="-2" attributes="0"/>
+                                              </Group>
                                               <Group type="102" alignment="1" attributes="0">
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Component id="Actividad_textoTipoActividad" min="-2" max="-2" attributes="0"/>
@@ -2184,7 +2190,13 @@
                                               <Component id="Actividad_descripcion" min="-2" pref="158" max="-2" attributes="0"/>
                                           </Group>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="Actividad_crear_botonAgregarActividad" min="-2" pref="45" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Group type="103" groupAlignment="3" attributes="0">
+                                                  <Component id="Actividad_crear_botonAgregarActividad" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                                                  <Component id="Actividad_textoCalificacion" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Component id="Actividad_calificacion" alignment="0" min="-2" pref="36" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <EmptySpace max="-2" attributes="0"/>
@@ -2401,7 +2413,7 @@
 
                           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                           <SubComponents>
-                            <Component class="javax.swing.JTextPane" name="descripcion">
+                            <Component class="javax.swing.JTextPane" name="descripcionActividad">
                             </Component>
                           </SubComponents>
                         </Container>
@@ -2414,6 +2426,22 @@
                           </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Actividad_crear_botonAgregarActividadActionPerformed"/>
+                          </Events>
+                        </Component>
+                        <Component class="javax.swing.JLabel" name="Actividad_textoCalificacion">
+                          <Properties>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Dialog" size="20" style="0"/>
+                            </Property>
+                            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="0" green="0" red="0" type="rgb"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Calificaci&#xf3;n"/>
+                          </Properties>
+                        </Component>
+                        <Component class="javax.swing.JTextField" name="Actividad_calificacion">
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Actividad_calificacionActionPerformed"/>
                           </Events>
                         </Component>
                       </SubComponents>
